more basic styling knocked out

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 	<nav role="navigation">
 		<ul class="nav-links">
-			<li><a class="link">Projects</a></li>
-			<li><a class="link">Github</a></li>
-			<li><a class="link">Linkedin</a></li>
+			<li class="link"><a class="nav-live-link" href="https://github.com/complicationlamp" >GitHub</a></li>
+			<li class="link"><a class="nav-live-link" href="https://www.linkedin.com/in/kyle-looker-12267323/">Linkedin</a></li>
+			<li class="link"><a class="nav-live-link">Projects</a></li>
 		</ul>
 	</nav>
 	<main role="main">
@@ -39,8 +39,8 @@
 			<p>
 				Build a deck of flash cards or use what the community built without the busy styling featured on other study apps.
 					The mobile first design and monochromatic theam were chosen to help me focus during my train commute.
-				</p>
-			<img src="photos/profileFlashQuiz.jpg" alt="flashQuiz profile view">
+			</p>
+			<img class="flashQuiz-img" src="photos/profileFlashQuiz.jpg" alt="flashQuiz profile view">
 			<h3>Built With</h3>
 			<ul class="languages">
 				<li class="language">React</li>
@@ -53,27 +53,25 @@
 			</ul>
 			<a 
 				href="http://www.looreddy.com" 
-				class="live-site-link">
+				class="live-site-link projBtn">
 				<i class="fas fa-external-link-square-alt"></i>
-				Go to live site
+				Go to Live Site
 			</a>
 			<a 
-				href="" 
-				class="github-link">
+				href="https://github.com/complicationlamp/flashcard-react-app-client" 
+				class="github-link projBtn">
 				<i class="fas fa-external-link-square-alt"></i>
-				github
+				GitHub
 			</a>
 		</section>
-		<section>
-			Section 2
+
+		<section class="project">
 			<h2 class="project-name">Wedding Gift-Exchange</h2>
 			<p>
 				A small gift exchange app built to help break the ice at my wedding.
-					As people are coming from many different countries and cultures the app randomly matches people who agree to take part in the gift exchange.
-				</p>
-			<img src="https://via.placeholder.com/350x150">
-			<a href=" https://wedding-gift-exchange.herokuapp.com/" class="live-site-link">Wedding-gift-exchange</a>
-			<a href="" class="github-link">github</a>
+					As people are coming from many different countries the app randomly matches people who agree to exchange culturally significant gifts.
+			</p>
+			<img class="giftex-img" src="photos/giftex.jpg" alt="giftexchange profile view">
 			<h3>Built With</h3>
 			<ul class="languages">
 				<li class="language">JavaScript</li>
@@ -83,17 +81,27 @@
 				<li class="language">Passport</li>
 				<li class="language">Mocha</li>
 			</ul>
+			<a 
+				href=" https://wedding-gift-exchange.herokuapp.com/" 
+				class="live-site-link projBtn">
+				<i class="fas fa-external-link-square-alt"></i>
+				Go to Live Site
+			</a>
+			<a 
+				href="https://github.com/complicationlamp/WeddingGiftEx" 
+				class="github-link projBtn">
+				<i class="fas fa-external-link-square-alt"></i>
+				GitHub
+			</a>
 		</section>
-		<section>
-			Section 3
+
+		<section class="project">
 			<h2 class="project-name">Wedding Event Guide</h2>
 			<p>
 				Weddings can be a logistical nightmare and if you wedding is a several day multiple location affair people will get the details confused.
 					Faced with this problem I built an event guid for my wedding that sorts information by day giving location, time, event details, weather and directions.
-				</p>
-			<img src="https://via.placeholder.com/350x150">
-			<a href="https://complicationlamp.github.io/wedding-events/." class="live-site-link">Wedding Event Guide</a>
-			<a href="" class="github-link">github</a>
+			</p>
+			<img class="eventGuide-img" src="photos/weddingEvent.png" alt="weddingEvent home view">
 			<h3>Built With</h3>
 			<ul class="languages">
 				<li class="language">JavaScript</li>
@@ -102,6 +110,18 @@
 				<li class="language">Google Maps API</li>
 				<li class="language">OpenWeatherMap API</li>
 			</ul>
+			<a 
+				href="https://complicationlamp.github.io/wedding-events/." 
+				class="live-site-link projBtn">
+				<i class="fas fa-external-link-square-alt"></i>
+				Go to Live Site
+			</a>
+			<a 
+				href="https://github.com/complicationlamp/wedding-events" 
+				class="github-link projBtn">
+				<i class="fas fa-external-link-square-alt"></i>
+				GitHub
+			</a>
 		</section>
 	</main>
 	<footer role="content-info">Have you noticed how large sites make footers?</footer>
