adjusting to size at 480px

--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
 		<ul class="nav-links">
 			<li class="link"><a class="nav-live-link" href="https://github.com/complicationlamp" >GitHub</a></li>
 			<li class="link"><a class="nav-live-link" href="https://www.linkedin.com/in/kyle-looker-12267323/">Linkedin</a></li>
-			<li class="link"><a class="nav-live-link">Projects</a></li>
+			<li class="link"><a class="nav-live-link" href="#projects">Projects</a></li>
 		</ul>
 	</nav>
 	<main role="main">
 		<header role="banner">
 			<h1 class="hello-world">
-				Hi, I’m Kyle. I build things, break them, and put them back together.
+				Hi, I’m Kyle. <br/>I build things,<br/> break them,<br/> and put them<br/> back together.
 			</h1>
 		</header>
 
 		<section>
 			<div class="about-me lines">
 				<h2>About Me</h2>
-				<img src="photos/me.jpeg" alt="image of me">
+				<img class="profilePic" src="photos/kyle.jpg" alt="image of me">
 				<p>
 					I’m an applied scientist who chose to pursue web development thanks to a passion for frustration.  
 				</p>
 			</div>
 		</section>
 
-		<section class="project">
+		<section id="projects" class="project">
 			<h2 class="project-name">FlashQuiz</h2>
 			<p>
 				Build a deck of flash cards or use what the community built without the busy styling featured on other study apps.
 					The mobile first design and monochromatic theam were chosen to help me focus during my train commute.
 			</p>
-			<img class="flashQuiz-img" src="photos/profileFlashQuiz.jpg" alt="flashQuiz profile view">
+			<img class="projectImg flashQuiz-img" src="photos/profileFlashQuiz.jpg" alt="flashQuiz profile view">
 			<h3>Built With</h3>
 			<ul class="languages">
 				<li class="language">React</li>
@@ -71,7 +71,7 @@
 				A small gift exchange app built to help break the ice at my wedding.
 					As people are coming from many different countries the app randomly matches people who agree to exchange culturally significant gifts.
 			</p>
-			<img class="giftex-img" src="photos/giftex.jpg" alt="giftexchange profile view">
+			<img class="projectImg giftex-img" src="photos/giftex.jpg" alt="giftexchange profile view">
 			<h3>Built With</h3>
 			<ul class="languages">
 				<li class="language">JavaScript</li>
@@ -101,7 +101,7 @@
 				Weddings can be a logistical nightmare and if you wedding is a several day multiple location affair people will get the details confused.
 					Faced with this problem I built an event guid for my wedding that sorts information by day giving location, time, event details, weather and directions.
 			</p>
-			<img class="eventGuide-img" src="photos/weddingEvent.png" alt="weddingEvent home view">
+			<img class="projectImg eventGuide-img" src="photos/weddingEvent.png" alt="weddingEvent home view">
 			<h3>Built With</h3>
 			<ul class="languages">
 				<li class="language">JavaScript</li>
@@ -124,6 +124,6 @@
 			</a>
 		</section>
 	</main>
-	<footer role="content-info">Have you noticed how large sites make footers?</footer>
+	<footer role="content-info">Have you noticed how many sites have huge footers?</footer>
 </body>
 </html>
