--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 	<nav role="navigation">
 		<ul class="nav-links">
-			<li class="link"><a class="nav-live-link" href="https://github.com/complicationlamp" >GitHub</a></li>
-			<li class="link"><a class="nav-live-link" href="https://www.linkedin.com/in/kyle-looker-12267323/">Linkedin</a></li>
-			<li class="link"><a class="nav-live-link" href="#projects">Projects</a></li>
+			<li class="link"><a class="nav-live-link nav-link-github" href="https://github.com/complicationlamp" >GitHub</a></li>
+			<li class="link"><a class="nav-live-link nav-link-linkedin" href="https://www.linkedin.com/in/kyle-looker-12267323/">Linkedin</a></li>
+			<li class="link"><a class="nav-live-link nav-link-projects" href="#projects">Projects</a></li>
 		</ul>
 	</nav>
 	<main role="main">
@@ -27,19 +27,23 @@
 		<section>
 			<div class="about-me lines">
 				<h2>About Me</h2>
-				<img class="profilePic" src="photos/kyle.jpg" alt="image of me">
-				<p>
+				<img class="profilePic" src="photos/kyle.jpg" alt="image of me"><br/>
+				<div class="meDetails">
+					<p>
 					I’m an applied scientist who chose to pursue web development thanks to a passion for frustration.  
-				</p>
+					</p>
+				</div>
 			</div>
 		</section>
 
 		<section id="projects" class="project">
 			<h2 class="project-name">FlashQuiz</h2>
-			<p>
-				Build a deck of flash cards or use what the community built without the busy styling featured on other study apps.
-					The mobile first design and monochromatic theam were chosen to help me focus during my train commute.
-			</p>
+			<div class ="projectDetails">
+				<p>
+					Build a deck of flash cards or use what the community built without the busy styling featured on other study apps.
+						The mobile first design and monochromatic theam were chosen to help me focus during my train commute.
+				</p>
+			</div>
 			<img class="projectImg flashQuiz-img" src="photos/profileFlashQuiz.jpg" alt="flashQuiz profile view">
 			<h3>Built With</h3>
 			<ul class="languages">
@@ -67,10 +71,12 @@
 
 		<section class="project">
 			<h2 class="project-name">Wedding Gift-Exchange</h2>
-			<p>
-				A small gift exchange app built to help break the ice at my wedding.
-					As people are coming from many different countries the app randomly matches people who agree to exchange culturally significant gifts.
-			</p>
+			<div class ="projectDetails">
+				<p>
+					A small gift exchange app built to help break the ice at my wedding.
+						As people are coming from many different countries the app randomly matches people who agree to exchange culturally significant gifts.
+				</p>
+			</div>
 			<img class="projectImg giftex-img" src="photos/giftex.jpg" alt="giftexchange profile view">
 			<h3>Built With</h3>
 			<ul class="languages">
@@ -97,10 +103,12 @@
 
 		<section class="project">
 			<h2 class="project-name">Wedding Event Guide</h2>
-			<p>
-				Weddings can be a logistical nightmare and if you wedding is a several day multiple location affair people will get the details confused.
-					Faced with this problem I built an event guid for my wedding that sorts information by day giving location, time, event details, weather and directions.
-			</p>
+			<div class ="projectDetails">
+				<p>
+					Weddings can be a logistical nightmare and if you wedding is a several day multiple location affair people will get the details confused.
+						Faced with this problem I built an event guid for my wedding that sorts information by day giving location, time, event details, weather and directions.
+				</p>
+			</div>
 			<img class="projectImg eventGuide-img" src="photos/weddingEvent.png" alt="weddingEvent home view">
 			<h3>Built With</h3>
 			<ul class="languages">
@@ -124,6 +132,6 @@
 			</a>
 		</section>
 	</main>
-	<footer role="content-info">Have you noticed how many sites have huge footers?</footer>
+	<footer role="content-info" class="footerText">Have you noticed how many sites have huge footers?</footer>
 </body>
 </html>
