stanger things nav

--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
 			<li class="link"><a class="nav-live-link nav-link-projects" href="#projects">Projects</a></li>
 		</ul>
 	</nav>
+	<header role="banner">
+		<h1 class="hello-world">
+			Hi, I’m Kyle. <br/>I build things,<br/> break them,<br/> and put them<br/> back together.
+		</h1>
+	</header>
 	<main role="main">
-		<header role="banner">
-			<h1 class="hello-world">
-				Hi, I’m Kyle. <br/>I build things,<br/> break them,<br/> and put them<br/> back together.
-			</h1>
-		</header>
-
 		<section>
 			<div class="about-me lines">
 				<h2>About Me</h2>
@@ -39,7 +38,7 @@
 		<section id="projects" class="project">
 			<h2 class="project-name">FlashQuiz</h2>
 			<div class ="projectDetails">
-				<p>
+				<p role="complementary">
 					Build a deck of flash cards or use what the community built without the busy styling featured on other study apps.
 						The mobile first design and monochromatic theam were chosen to help me focus during my train commute.
 				</p>
@@ -72,7 +71,7 @@
 		<section class="project">
 			<h2 class="project-name">Wedding Gift-Exchange</h2>
 			<div class ="projectDetails">
-				<p>
+				<p role="complementary">
 					A small gift exchange app built to help break the ice at my wedding.
 						As people are coming from many different countries the app randomly matches people who agree to exchange culturally significant gifts.
 				</p>
@@ -104,7 +103,7 @@
 		<section class="project">
 			<h2 class="project-name">Wedding Event Guide</h2>
 			<div class ="projectDetails">
-				<p>
+				<p role="complementary">
 					Weddings can be a logistical nightmare and if you wedding is a several day multiple location affair people will get the details confused.
 						Faced with this problem I built an event guid for my wedding that sorts information by day giving location, time, event details, weather and directions.
 				</p>
@@ -132,6 +131,6 @@
 			</a>
 		</section>
 	</main>
-	<footer role="content-info" class="footerText">Have you noticed how many sites have huge footers?</footer>
+	<footer role="contentinfo" class="footerText">Have you noticed how many sites have huge footers?</footer>
 </body>
 </html>
