--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<ul class="nav-links">
 			<li class="link"><a class="nav-live-link nav-link-github" href="https://github.com/complicationlamp" >GitHub</a></li>
 			<li class="link"><a class="nav-live-link nav-link-linkedin" href="https://www.linkedin.com/in/kyle-looker-12267323/">Linkedin</a></li>
+			<li class="link"><a class="nav-live-link nav-link-github" href="/photos/kyleLookerResume.pdf" >Resume</a></li>
 			<li class="link"><a class="nav-live-link nav-link-projects" href="#projects">Projects</a></li>
 		</ul>
 	</nav>
@@ -31,6 +32,13 @@
 					<p>
 					I’m an applied scientist who chose to pursue web development thanks to a passion for frustration.  
 					</p>
+				</div>
+				<div class="resume">
+					<a 
+						href="/photos/kyleLookerResume.pdf"
+						class="resume-btn">
+						<i class="far fa-file-pdf" aria-hidden="true"></i>
+					Resume</a>
 				</div>
 			</div>
 		</section>
