changed wedding guide photo

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						Faced with this problem I built an event guid for my wedding that sorts information by day giving location, time, event details, weather and directions.
 				</p>
 			</div>
-			<img class="projectImg eventGuide-img" src="photos/weddingEvent.png" alt="weddingEvent home view">
+			<img class="projectImg eventGuide-img" src="photos/wedding_guide.jpg" alt="weddingEvent home view">
 			<h3>Built With</h3>
 			<ul class="languages">
 				<li class="language">JavaScript</li>
