iphone and laptop images

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
 						The mobile first design and monochromatic theam were chosen to help me focus during my train commute.
 				</p>
 			</div>
-			<img class="projectImg flashQuiz-img" src="photos/profileFlashQuiz.jpg" alt="flashQuiz profile view">
+			<div class="photos">
+				<img class="projectImg flashQuiz-img" src="photos/profileFlashQuiz.jpg" alt="flashQuiz profile view">
+				<img class="iphone iphone-flashquiz" src="photos/flashQuizIphone.png" alt="mobile-view-flashquiz">
+			</div>
 			<h3>Built With</h3>
 			<ul class="languages">
 				<li class="language">React</li>
@@ -84,7 +87,9 @@
 						As people are coming from many different countries the app randomly matches people who agree to exchange culturally significant gifts.
 				</p>
 			</div>
-			<img class="projectImg giftex-img" src="photos/giftex.jpg" alt="giftexchange profile view">
+			<div class="photos">
+				<img class="projectImg giftex-img" src="photos/giftex.jpg" alt="giftexchange profile view">
+			</div>
 			<h3>Built With</h3>
 			<ul class="languages">
 				<li class="language">JavaScript</li>
@@ -116,7 +121,10 @@
 						Faced with this problem I built an event guid for my wedding that sorts information by day giving location, time, event details, weather and directions.
 				</p>
 			</div>
-			<img class="projectImg eventGuide-img" src="photos/weddingGuide.jpg" alt="weddingEvent home view">
+			<div class="photos">
+				<img class="laptop eventGuide-img" src="photos/eventGuideLaptop.png" alt="weddingEvent home view">
+				<img class="iphone iphone-eventGuide" src="photos/wedGuideIphone.png" alt="mobile-view-eventGuide">
+			</div>
 			<h3>Built With</h3>
 			<ul class="languages">
 				<li class="language">JavaScript</li>
