added in laptop and phone for gift exchange

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 				</p>
 			</div>
 			<div class="photos">
-				<img class="projectImg giftex-img" src="photos/giftex.jpg" alt="giftexchange profile view">
+				<img class="laptop giftEx-img" src="photos/giftExLaptop.png" alt="giftexchange home view">
+				<img class="iphone iphone-giftEx" src="photos/giftx.png" alt="gifexchange-mobile-view">
 			</div>
 			<h3>Built With</h3>
 			<ul class="languages">
