added iphone shot

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			</div>
 			<div class="photos">
 				<img class="laptop giftEx-img" src="photos/giftExLaptop.png" alt="giftexchange home view">
-				<img class="iphone iphone-giftEx" src="photos/giftx.png" alt="gifexchange-mobile-view">
+				<img class="iphone iphone-giftEx" src="photos/giftxIphone.png" alt="gifexchange-mobile-view">
 			</div>
 			<h3>Built With</h3>
 			<ul class="languages">
