styling and changing some spelling mistakes

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 	</nav>
 	<header role="banner">
 		<h1 class="hello-world">
-			Hi, I’m Kyle. <br/>I build things,<br/> break them,<br/> and put them<br/> back together.
+			Hi, I’m Kyle.
 		</h1>
+		<p class="whatIdo">I build things,<br/> break them,<br/> and put them<br/> back together.</p>
 	</header>
 	<main role="main">
 		<section>
@@ -52,19 +53,21 @@
 				</p>
 			</div>
 			<div class="photos">
-				<img class="projectImg flashQuiz-img" src="photos/profileFlashQuiz.jpg" alt="flashQuiz profile view">
+				<img class="laptop flashQuiz-img" src="photos/flashQuizHome.png" alt="flashQuiz home view">
 				<img class="iphone iphone-flashquiz" src="photos/flashQuizIphone.png" alt="mobile-view-flashquiz">
 			</div>
-			<h3>Built With</h3>
-			<ul class="languages">
-				<li class="language">React</li>
-				<li class="language">Redux</li>
-				<li class="language">Node</li>
-				<li class="language">MongoDB</li>
-				<li class="language">Passport-JWT</li>
-				<li class="language">Enzyme</li>
-				<li class="language">Mocha</li>
-			</ul>
+			<div class="language-container">
+				<h3>Built With</h3>
+				<ul class="languages">
+					<li class="language">React</li>
+					<li class="language">Redux</li>
+					<li class="language">Node</li>
+					<li class="language">MongoDB</li>
+					<li class="language">Passport-JWT</li>
+					<li class="language">Enzyme</li>
+					<li class="language">Mocha</li>
+				</ul>
+			</div>
 			<a 
 				href="http://www.looreddy.com" 
 				class="live-site-link projBtn">
@@ -91,15 +94,17 @@
 				<img class="laptop giftEx-img" src="photos/giftExLaptop.png" alt="giftexchange home view">
 				<img class="iphone iphone-giftEx" src="photos/giftxIphone.png" alt="gifexchange-mobile-view">
 			</div>
-			<h3>Built With</h3>
-			<ul class="languages">
-				<li class="language">JavaScript</li>
-				<li class="language">jQuery</li>
-				<li class="language">Node</li>
-				<li class="language">MongoDB</li>
-				<li class="language">Passport</li>
-				<li class="language">Mocha</li>
-			</ul>
+			<div class="language-container">
+				<h3>Built With</h3>
+				<ul class="languages">
+					<li class="language">JavaScript</li>
+					<li class="language">jQuery</li>
+					<li class="language">Node</li>
+					<li class="language">MongoDB</li>
+					<li class="language">Passport</li>
+					<li class="language">Mocha</li>
+				</ul>
+			</div>
 			<a 
 				href=" https://wedding-gift-exchange.herokuapp.com/" 
 				class="live-site-link projBtn">
@@ -126,14 +131,16 @@
 				<img class="laptop eventGuide-img" src="photos/eventGuideLaptop.png" alt="weddingEvent home view">
 				<img class="iphone iphone-eventGuide" src="photos/wedGuideIphone.png" alt="mobile-view-eventGuide">
 			</div>
-			<h3>Built With</h3>
-			<ul class="languages">
-				<li class="language">JavaScript</li>
-				<li class="language">jQuery</li>
-				<li class="language">AJAX</li>
-				<li class="language">Google Maps API</li>
-				<li class="language">OpenWeatherMap API</li>
-			</ul>
+			<div class="language-container">
+				<h3>Built With</h3>
+				<ul class="languages">
+					<li class="language">JavaScript</li>
+					<li class="language">jQuery</li>
+					<li class="language">AJAX</li>
+					<li class="language">Google Maps API</li>
+					<li class="language">OpenWeatherMap API</li>
+				</ul>
+			</div>
 			<a 
 				href="https://complicationlamp.github.io/wedding-events/." 
 				class="live-site-link projBtn">
