changed up the styling a bunch, removed obnoxius colors, moved profile image to nav bar and about me to the bottom

--- a/index.html
+++ b/index.html
@@ -11,39 +11,21 @@
 </head>
 <body>
 	<nav role="navigation">
+		<img class="profilePic" src="photos/kyle.jpg" alt="image of me"><br/>
+		<h1 class="hello-world">
+				Hi, I’m Kyle.
+			</h1>
 		<ul class="nav-links">
 			<li class="link"><a class="nav-live-link nav-link-github" href="https://github.com/complicationlamp" >GitHub</a></li>
 			<li class="link"><a class="nav-live-link nav-link-linkedin" href="https://www.linkedin.com/in/kyle-looker-12267323/">Linkedin</a></li>
 			<li class="link"><a class="nav-live-link nav-link-github" href="/photos/kyleLookerResume.pdf" >Resume</a></li>
-			<li class="link"><a class="nav-live-link nav-link-projects" href="#projects">Projects</a></li>
+			<li class="link"><a class="nav-live-link nav-link-projects" href="#about-me">About Me</a></li>
 		</ul>
 	</nav>
 	<header role="banner">
-		<h1 class="hello-world">
-			Hi, I’m Kyle.
-		</h1>
-		<p class="whatIdo">I build things,<br/> break them,<br/> and put them<br/> back together.</p>
+		<p class="whatIdo">
 	</header>
 	<main role="main">
-		<section>
-			<div class="about-me lines">
-				<h2>About Me</h2>
-				<img class="profilePic" src="photos/kyle.jpg" alt="image of me"><br/>
-				<div class="meDetails">
-					<p>
-					I’m an applied scientist who chose to pursue web development thanks to a passion for frustration.  
-					</p>
-				</div>
-				<div class="resume">
-					<a 
-						href="/photos/kyleLookerResume.pdf"
-						class="resume-btn">
-						<i class="far fa-file-pdf" aria-hidden="true"></i>
-					Resume</a>
-				</div>
-			</div>
-		</section>
-
 		<section id="projects" class="project">
 			<h2 class="project-name">FlashQuiz</h2>
 			<div class ="projectDetails">
@@ -153,6 +135,24 @@
 				<i class="fas fa-external-link-square-alt"></i>
 				GitHub
 			</a>
+		</section>
+
+		<section>
+				<div id="about-me" class="about-me lines">
+					<h2>About Me</h2>
+					<div class="meDetails">
+						<p>
+						I’m an applied scientist who chose to pursue web development thanks to a passion for frustration. I build things, break them, and put them back together.  
+						</p>
+					</div>
+					<div class="resume">
+						<a 
+							href="/photos/kyleLookerResume.pdf"
+							class="resume-btn">
+							<i class="far fa-file-pdf" aria-hidden="true"></i>
+						Resume</a>
+					</div>
+				</div>
 		</section>
 	</main>
 	<footer role="contentinfo" class="footerText">Have you noticed how many sites have huge footers?</footer>
