added a link to the api for the flash card app

--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
 				href="https://github.com/complicationlamp/flashcard-react-app-client" 
 				class="github-link projBtn">
 				<i class="fas fa-external-link-square-alt"></i>
-				GitHub
+				GitHub Client
+			</a>
+			<a 
+				href="https://github.com/complicationlamp/flashcard-react-app-api" 
+				class="github-link projBtn">
+				<i class="fas fa-external-link-square-alt"></i>
+				GitHub API
 			</a>
 		</section>
 
