--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Kumar+One+Outline" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="icon" type="image/png" href="photos/child.png">
@@ -13,29 +14,40 @@
 	<script>
 	function makeItBad() {
 		console.log("button clicked");
-		const element = document.getElementById("navigation");
-		element.classList.toggle("mystyle");
+		const badNav = document.getElementById("navigation",);
+		badNav.classList.toggle("badNav-style");
+		const badBody = document.getElementById("body");
+		badBody.classList.toggle("badBody-style");
+		function hideImage(){
+        	document.getElementById('laptop-flashQuiz-img').style.visibility=hidden;
+    	}
 	}
 	</script>
 	<style>
-		.mystyle {
+		.badNav-style {
 			width: 100%;
 			padding: 25px;
 			background-color:#30fa09;
-			color: white;
-			font-family: "comic sans";
+			color: black;
+			font-family: 'Kumar One Outline';
+
 			font-size: 25px;
 			box-sizing: border-box;
 		}
+		.badBody-style{
+			background: url(photos/pizza.jpg)
+		}
 	</style>
 </head>
-<body>
+<body id="body">
 	<nav role="navigation" id="navigation">
 		<img class="profilePic" src="photos/kyle.jpg" alt="image of me"><br/>
 		<h1 class="hello-world">
-				Hi, I’m Kyle.
-			</h1>
-		<ul class="nav-links">
+				Hi, I’m Kyle.<button onclick="makeItBad()">THE BAD SITE BTN   <i class="fa fa-4x fa-bomb" aria-hidden="true"></i></button>
+		</h1>
+		<!-- thi is the button that toggles the terrible skin onto my sight -->
+		
+		<ul class="nav-links" id="nav-links">
 			<li class="link"><a class="nav-live-link nav-link-github" href="https://github.com/complicationlamp" >GitHub</a></li>
 			<li class="link"><a class="nav-live-link nav-link-linkedin" href="https://www.linkedin.com/in/kyle-looker-12267323/">Linkedin</a></li>
 			<li class="link"><a class="nav-live-link nav-link-github" href="/photos/kyleLookerResume.pdf" >Resume</a></li>
@@ -46,10 +58,6 @@
 		<p class="whatIdo">
 	</header>
 	<main role="main">
-		<section>
-				<button onclick="makeItBad()">Make this horrible</button>
-				
-		</section>
 		<section id="projects" class="project">
 			<h2 class="project-name">FlashQuiz</h2>
 			<div class ="projectDetails">
@@ -59,7 +67,7 @@
 				</p>
 			</div>
 			<div class="photos">
-				<img class="laptop flashQuiz-img" src="photos/flashQuizHome.png" alt="flashQuiz home view">
+				<img class="laptop flashQuiz-img" id="laptop-flashQuiz-img"src="photos/flashQuizHome.png" alt="flashQuiz home view">
 				<img class="iphone iphone-flashquiz" src="photos/flashQuizIphone.png" alt="mobile-view-flashquiz">
 			</div>
 			<div class="language-container">
