some style added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Poppins|Press+Start+2P" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Poppins|Press+Start+2P|Creepster|Ceviche+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="icon" type="image/png" href="photos/child.png">
@@ -16,18 +16,28 @@
 	function makeItBad() {
 		swal({
 			title: "Are you sure?",
-			text: "Warning: clicking ok displays viloently bright colors and pretty much makes the site bad/awsome!",
+			text: "Warning: clicking ok displays violently bright colors and pretty much makes the site bad/awesome!",
 			icon: "warning",
 			buttons: true,
 			dangerMode: true,
 			})
 			.then((willDelete) => {
 				if (willDelete) {
-					console.log("ok clicked");
+					// changes the navigation bar styling
 					const badNav = document.getElementById("navigation");
 					badNav.classList.toggle("badNav-style");
+					// changes the body styling
 					const badBody = document.getElementById("body");
 					badBody.classList.toggle("badBody-style");
+					const badCopy = document.getElementById("projects");
+					badCopy.classList.toggle("badCopy-style");
+					//change titles
+					const badProjTitleFQ = document.getElementById("project-name-FlashQuiz");
+					const badProjTitleWGE = document.getElementById("project-name-WedGifEx");
+					const badProjTitleWG = document.getElementById("project-name-wedGuide");
+					badProjTitleWGE.classList.toggle("badProjTitle");
+					badProjTitleWG.classList.toggle("badProjTitle"); 
+					badProjTitleFQ.classList.toggle("badProjTitle");
 					function hideImage(){
 						document.getElementById('laptop-flashQuiz-img').style.visibility="hidden";
 					}
@@ -43,7 +53,16 @@
 			font-family: 'Press Start 2P';
 		}
 		.badBody-style{
-			background: url(photos/pizza.jpg)
+			background: url(photos/pizza.jpg);
+		}
+		.badCopy-style{
+			font-family: 'Ceviche One', cursive;
+			font-size: 1.5em;
+		}
+		.badProjTitle{
+			font-family: 'Creepster', cursive;
+			font-size: 3em;
+    		text-shadow: 5px 2px chartreuse;
 		}
 	</style>
 </head>
@@ -67,7 +86,7 @@
 	</header>
 	<main role="main">
 		<section id="projects" class="project">
-			<h2 class="project-name">FlashQuiz</h2>
+			<h2 class="project-name" id="project-name-FlashQuiz">FlashQuiz</h2>
 			<div class ="projectDetails">
 				<p role="complementary">
 					Build a deck of flash cards or use what the community built without the busy styling featured on other study apps.
@@ -111,7 +130,7 @@
 		</section>
 
 		<section class="project">
-			<h2 class="project-name">Wedding Gift-Exchange</h2>
+			<h2 class="project-name" id="project-name-WedGifEx">Wedding Gift-Exchange</h2>
 			<div class ="projectDetails">
 				<p role="complementary">
 					A small gift exchange app built to help break the ice at my wedding.
@@ -148,7 +167,7 @@
 		</section>
 
 		<section class="project">
-			<h2 class="project-name">Wedding Event Guide</h2>
+			<h2 class="project-name" id="project-name-wedGuide">Wedding Event Guide</h2>
 			<div class ="projectDetails">
 				<p role="complementary">
 					Weddings can be a logistical nightmare and if you wedding is a several day multiple location affair people will get the details confused.
@@ -201,6 +220,6 @@
 				</div>
 		</section>
 	</main>
-	<footer role="contentinfo" class="footerText">Have you noticed how many sites have huge footers?</footer>
+	<footer role="contentinfo" id="footer" class="footerText">Have you noticed how many sites have huge footers?</footer>
 </body>
 </html>
